--- a/style.css
+++ b/style.css
@@ -1,245 +1,71 @@
 *{margin:0;padding:0}
-body{
-	background-color:rgba(99, 99, 93, 0.96);
+body{font-family:Sans-Serif, Arial !important; transition:all 0.5s ease;-webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;}
+body, html{height:100%;}
+img{max-width:100%}
+a{text-decoration:none}
+a:hover{text-decoration:none}
+h1, h2, h3, h4, h5, h6{font-weight:normal;margin-top:10px;margin-bottom:10px}
+p{line-height: 150%;margin-bottom: 2em;}
+.container_full {width: 100%; height: auto;}
+.container {width:960px; margin:0 auto; display:block }
+.fix{overflow:hidden;}
+.aligncenter{display:block;margin:0 auto;}
+.floatleft{float:left}
+.floatright{float:right}
+
+.header_bg{
+	background:#E8E8E8;
+	overflow:hidden;
 }
-#wrapper{
-	background-color:#FFFFFF;
-	width:960px;
-	margin: 15px auto;
+.logo{
+	padding:20px 0;
+	overflow:hidden;
 }
-#header{
-	background-color:rgba(255, 255, 255, 0.8);
-	border-bottom:3px solid white;;
-}
-#header h2{
-	
-	padding-left:50px;
-	padding-top:30px;
-	
-}
-#header h2 a{
-	text-decoration:none;
-	font-family:fantasy;
-	font-size:50px;
-	color:black;
-	transition:1s all ease;
-}
-#header h2 a:hover{
-	padding-left:55px;
-	
-}
-#header p{
-	padding-left:50px;
-	padding-bottom:30px;
-	font-family:sans-serif;
-	font-size:15px;
+.logo h1{
+	font-family:qlassik;
 	font-weight:bold;
+	font-size:33px;
+	color:#515151;
+	margin-top:26px;
 }
-#nav{
-	background-color:#3B4345;
-	height:45px;
-	border-bottom:5px solid #6B710E;
+.menu{
+	background: #F5F5F5;
+    border-radius: 5px;
+    box-shadow: 1px 1px 2px #AFAFAF;
+    margin-top: 48px;
+    padding: 2px 0;
 	
 }
-#nav ul{
-	background-color:#fff;
-	list-style-type:none;
-	z-index:999;
+.menu ul{
+	list-style:none;
 }
-#nav ul li{
+.menu ul li{
 	float:left;
-	border-right:1px solid	#6B710E;
-	transition:0.3s all ease;
+	padding:5px 15px;
+	background:url(images/menu_border.png) no-repeat;
+	background-position:center right;
 }
-#nav ul li:last-child{
-	border-right:none;
+.menu ul li:last-child{
+	background:none;
 }
-#nav ul li a{
-	text-decoration:none;
-	color:white;
+.menu ul li:last-child:hover{
+	background:url(images/menu_hover1.png) no-repeat;
+	background-position:center center;
+	background-size:cover;
+}
+.menu ul li:hover{
+	background:url(images/menu_hover.png) no-repeat;
+	background-position:center center;
+	background-size:cover;
+}
+.menu ul li a{
 	display:block;
-	padding:15px 25px;
-	font-family:arial;
-	transition:0.3s all ease;
+	font-family:qlassik;
+	font-weight:bold;
+	font-size:19px;
+	color:#515151;	
 }
-#nav ul li a:hover{
-	background-color:#6B710E;
-}
-#nav ul li:hover{
-	background-color:#6B710E;
-}
-#about{
-	background-color:#6B710E;
-}
-#about h2{
-	padding-left:20px;
-	padding-top:20px;
-	font-family:arial;
-	font-size:50px;
-	
-	
-}
-#about h2 a{
-	text-align:center;
-	text-decoration:none;
-	color:white;
-	transition:0.8s all ease;
-}
-
-#about h2 a:hover{
-	padding-left:20px;
-	
-}
-#about p{
-	padding-left:30px;
-	padding-bottom:30px;
-	font-family:arial;
-	font-size:15px;
-	color:white;
-}
-#selection{
-	
-}
-#selection img{
-	width:960px;
-	height:400px;
-}
-#article{
-	width:630px;
-	background-color:#FFFFFF;
-	padding-bottom:50px;
-	float:left;
-}
-#article p{
-	padding-top:20px;
-	padding-left:20px;
-	font-family:arial;
-	color:#4a4646;
-}
-#article h2{
-	padding-top:5px;
-	padding-left:20px;
-}
-#article h2 a{
-	text-decoration:none;
-	font-family:arial;
-	color:#cc3939;
-	transition:0.8s all ease;
-}
-#article h2 a:hover{
-	padding-left:20px;
-}
-#article h3{
-	padding-top:30px;
-	padding-left:20px;
-	
-}
-#article h3 a{
-	text-decoration:none;
-	font-family:arial;
-	color:#cc3939;
-	transition:0.8s all ease;
-}
-#article h3 a:hover{
-	padding-left:15px;
-}
-#img{
-	padding-top:10px;
-	padding-left:20px;
-}
-#img img{
-	width:580px;
-	height:580px;
-	border:6px solid #dde2e2;
-	
-}
-#sidebar{
-	width:330px;
-	float:right;
-	background-color:#FFFFFF;
-	
-}
-#content_1{
-	border-left:2px solid rgba(158, 158, 158, 0.36)
-}
-#content_1 h3{
-	padding-left:15px;
-	padding-top:10px;
-	color:#9E9E9E;
-}
-#content_1 h3 a{
-	text-decoration:none;
-	font-family:arial;
-	color:#cc3939;
-	transition:0.8s all ease;
-}
-#content_1 h3 a:hover{
-	padding-left:20px;
-}
-#content_1 p{
-	padding-left:15px;
-	padding-right:15px;
-	padding-top:10px;
-	text-align:justify;
-}
-#content_2{
-	border-left:2px solid rgba(158, 158, 158, 0.36);
-	
-}
-#content_2 h3{
-	padding-left:15px;
-	padding-top:10px;
-	color:#9E9E9E;
-}
-#content_2 h3 a{
-	text-decoration:none;
-	font-family:arial;
-	color:#cc3939;
-	transition:0.8s all ease;
-}
-#content_2 h3 a:hover{
-	padding-left:20px;
-}
-#content_2 p{
-	padding-left:15px;
-	padding-right:15px;
-	padding-top:10px;
-	text-align:justify;
-}
-#footer{
-	background-color:#3B4345;
-	display:block;
-	clear:left;
-}
-#footer p{
-	text-align:center;
-	padding:20px;
-}
-#footer p a{
-	text-decoration:none;
-	text-align:center;
-	color:white;
-	
-	
-}
-#footer p a:hover{
-	color:#cc3939;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.menu ul li a:hover{}
 
 
 
