--- a/style.css
+++ b/style.css
@@ -1,71 +1,91 @@
 *{margin:0;padding:0}
-body{font-family:Sans-Serif, Arial !important; transition:all 0.5s ease;-webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;}
-body, html{height:100%;}
-img{max-width:100%}
-a{text-decoration:none}
-a:hover{text-decoration:none}
-h1, h2, h3, h4, h5, h6{font-weight:normal;margin-top:10px;margin-bottom:10px}
-p{line-height: 150%;margin-bottom: 2em;}
-.container_full {width: 100%; height: auto;}
-.container {width:960px; margin:0 auto; display:block }
-.fix{overflow:hidden;}
-.aligncenter{display:block;margin:0 auto;}
-.floatleft{float:left}
-.floatright{float:right}
-
-.header_bg{
-	background:#E8E8E8;
+blockquote{
+	background:#ddd;
+	margin-left:50px;
+	padding:10px;
+	padding-left:30px;
+	border-left:2px solid orange;
+}
+body{
+	font-family:sans-sarif, Arial !important;
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+a{
+	text-decoration:none;
+}
+h1, h2, h3, h4, h5, h6{
+	font-weight: normal;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+p{
+	line-height:150%;
+	margin-bottom:2em;
+}
+.fix{
 	overflow:hidden;
-}
-.logo{
-	padding:20px 0;
-	overflow:hidden;
-}
-.logo h1{
-	font-family:qlassik;
-	font-weight:bold;
-	font-size:33px;
-	color:#515151;
-	margin-top:26px;
-}
-.menu{
-	background: #F5F5F5;
-    border-radius: 5px;
-    box-shadow: 1px 1px 2px #AFAFAF;
-    margin-top: 48px;
-    padding: 2px 0;
 	
 }
-.menu ul{
-	list-style:none;
+.container{
+	overflow:hidden;
+	margin:0 auto;
+	width:1024px;
 }
-.menu ul li{
+#bg_image{
+}
+.header_bg{
+}
+#header{
+	overflow:hidden;
+	border-bottom:2px solid #c5bfbf;
+}
+#header .logo_left{
 	float:left;
-	padding:5px 15px;
-	background:url(images/menu_border.png) no-repeat;
-	background-position:center right;
 }
-.menu ul li:last-child{
-	background:none;
+#header .logo_left h2{
+	font-family:Myriad Pro;
+	font-size:30px;
+	color:#ffffff;
+	padding-top:40px;
 }
-.menu ul li:last-child:hover{
-	background:url(images/menu_hover1.png) no-repeat;
-	background-position:center center;
-	background-size:cover;
-}
-.menu ul li:hover{
-	background:url(images/menu_hover.png) no-repeat;
-	background-position:center center;
-	background-size:cover;
-}
-.menu ul li a{
-	display:block;
-	font-family:qlassik;
-	font-weight:bold;
-	font-size:19px;
-	color:#515151;	
-}
-.menu ul li a:hover{}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
